<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/habitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="@string/habit_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/nameWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/name_warning"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/habitDescription"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:layout_marginTop="10dp"
                android:gravity="start|top"
                android:hint="@string/habit_description"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/descriptionWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/description_warning"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_type" />

                <RadioGroup
                    android:id="@+id/habitType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/positiveHabit">

                    <RadioButton
                        android:id="@+id/positiveHabit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/positive_habit" />

                    <RadioButton
                        android:id="@+id/negativeHabit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/negative_habit" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_priority" />

                <Spinner
                    android:id="@+id/habitPriority"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:entries="@array/habit_priorities" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeats_count" />

                <EditText
                    android:id="@+id/habitRepeatsCount"
                    android:layout_width="wrap_content"
                    android:ems="3"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times_in_days" />

                <EditText
                    android:id="@+id/habitRepeatDays"
                    android:layout_width="wrap_content"
                    android:ems="3"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="215dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/selectedColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/selected_color" />

                        <TextView
                            android:id="@+id/rgbColorValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rgb_color" />

                        <TextView
                            android:id="@+id/hsvColorValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hsv_color" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/chosenColorDisplay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false" />
                </LinearLayout>

                <HorizontalScrollView
                    android:id="@+id/colorPickerScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/colorPickerLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    app:layout_constraintEnd_toStartOf="@+id/saveButton"
                    app:layout_constraintStart_toEndOf="@+id/cancelButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/deleteButton"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>